AI 어시스턴트 확장 추가

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -119,5 +119,9 @@
 
     // "rangav.vscode-thunder-client",
 
+    /* AI Assistant ------------------------------------------------------------- */
+
+    // "Codeium.codeium",
+
   ]
 }
