NPM 구성 파일 추가
- .gitignore 수정
- .vscode/settings.json 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,15 +16,18 @@
     }
   },
   "files.associations": {
+    "*.js": "javascript",
     "*.jsx": "javascriptreact",
+    "*.ts": "typescript",
+    "*.tsx": "typescriptreact",
     ".browserslistrc": "bat",
     ".prettierrc": "json",
-    ".npmrc": "bat"
+    ".npmrc": "dotenv"
   },
 
   "emmet.variables": {
+    "lang": "ko-KR",
     "charset": "UTF-8",
-    "lang": "ko-KR"
   },
   "emmet.includeLanguages": {
     "markdown": "html",
@@ -87,6 +90,9 @@
   "typescript.suggest.autoImports": true,
   "typescript.suggest.paths": true,
 
+  "totalTypeScript.hideAllTips": true,
+  "totalTypeScript.hideBasicTips": true,
+
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": false
@@ -113,13 +119,15 @@
   },
 
   "eslint.enable": false,
-
-  "totalTypeScript.hideAllTips": true,
-  "totalTypeScript.hideBasicTips": true,
   
   "codeium.enableCodeLens": false,
-  "codeium.enableConfig": { 
+  "codeium.enableConfig": {
     "*": true,
+    "html": false,
+    "css": false,
+    "scss": false,
+    "json": false,
+    "jsonc": false,
     "javascript": false,
     "javascriptreact": false,
     "typescript": false,
