Error Lens 확장 추가

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -122,6 +122,7 @@
     /* AI Assistant ------------------------------------------------------------- */
 
     // "Codeium.codeium",
+    // "usernamehw.errorlens",
 
   ]
 }
