AI 어시스턴트 기능 비활성

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
   },
 
   "editor.formatOnSave": false,
+  "errorLens.enabled": false,
   "eslint.enable": false,
 
   "totalTypeScript.hideAllTips": true,
@@ -120,10 +121,11 @@
   
   "codeium.enableCodeLens": false,
   "codeium.enableConfig": { 
-    "*": true,
+    "*": false,
     "javascript": false,
     "javascriptreact": false,
     "typescript": false,
     "typescriptreact": false,
   },
+
 }
