--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-	"dependencies": {
-		"vite": "4.4.11"
-	}
+  "name": "react-fundamentals",
+  "description": "리액트 펀더멘탈 학습 저장소",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "vite": "4.4.11"
+  }
 }
