ESLint 구성 + 스타일 모듈 구성

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -54,17 +54,17 @@
     // "styled-components.vscode-styled-components",
     // "sanfilippopablo.react-component-refactor",
     // "angryobject.react-pure-to-class-vscode",
-    // "dsznajder.es7-react-js-snippets",
+    "dsznajder.es7-react-js-snippets",
     // "dsbasko.create-component-helper",
-    // "riazxrazor.html-to-jsx",
+    "riazxrazor.html-to-jsx",
     // "infarkt.css-to-jss",
     // "zenclabs.previewjs",
 
     /* Linter, Formatter -------------------------------------------------------- */
     
     // "stylelint.vscode-stylelint",
-    // "dbaeumer.vscode-eslint",
-    // "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
     // "rebornix.toggle",
     // "rome.rome",
 
