--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ./src --ext js,jsx --ignore-path .gitignore",
+    "format:check": "prettier ./src --check --ignore-path .gitignore",
+    "format:wrtie": "prettier ./src --wrtie --ignore-path .gitignore"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "vite": "4.4.11"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "4.1.0",
     "eslint": "8.51.0",
-    "eslint-plugin-react": "7.33.2"
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-react": "7.33.2",
+    "prettier": "3.0.3",
+    "vite": "4.5.0"
   }
 }
